<html>
<body>
<b>0.9.3</b>
<ul>
<li>settings for Connection Timeout and Read Timeout</li>
<li>added in new memory locations for v1.1.0 libraries</li>
</ul>
<br>
<b>0.9.2</b>
<ul>
<li>switched entirely to ContentProvider for better database functionality</li>
<li>ability to add custom notifications based on parameters from the controller</li>
<li>improved error logging to be stored in a database table</li>
<li>moved notifcation and error handling to a Service</li>
<li>make use of Large Notifications in JellyBean</li>
<li>changed default value for Pre 1.0 Locations to FALSE</li>
<li>removed French translations because of all the string changes being made</li>
<li>added icons to Commands Page and updated layout</li>
<li>switched to Fragment Activities for the database list pages</li>
<li>fixed error retry not working when the app was closed</li>
<li>fixed problem where buttons were not clickable after being on portal and switching to controller</li>
<li>fixed expansion relay bug with autoupdate modules</li>
<li>code cleanup</li>
</ul>
<br>
<b>0.9.1</b>
<ul>
<li>allow spaces to be in forum usernames</li>
</ul>
<br>
<b>0.9.0</b>
<ul>
<li>added actionbar support</li>
	<ul>
	<li>profile toggle</li>
	<li>refresh</li>
	</ul>
<li>added indicators to pages</li>
<li>added commands page to swipe left from the status page</li>
<li>added new icons</li>
<li>added lights on / off commands</li>
<li>added displaying of ATO high and low status on controller page</li>
<li>improved / updated all page layouts to be more consistent</li>
<li>fixed crash with downloading labels</li>
<li>download PWMA, PWMD, WL labels from portal</li>
<li>linked Vortech page to Radion big with auto module update</li>
<li>added 1 minute refresh interval</li>
<li>service no longer runs constantly</li>
<li>code updates and cleanup</li>
</ul>
<br>
<b>0.8.2</b>
<ul>
<li>added ability to disable specific relays to prevent accidental toggling from the app (from triggerNZ)</li>
	<ul>