@@ -24,6 +24,7 @@ public final class RequestCommands {
 	public static final String Relay = "/r";
 	public static final String LightsOn = "/l1";
 	public static final String LightsOff = "/l0";
+	public static final String Reboot = "/boot";
 	public static final String None = "";
 	public static final String ReefAngel = "ra";
 }
