@@ -194,4 +194,5 @@ Changelog of all the versions of AndroidStatus
 0.9.3
  * settings for Connection Timeout and Read Timeout
  * added in new memory locations for v1.1.0 libraries
+ * added reboot command
  
