@@ -4,6 +4,7 @@
 <ul>
 <li>settings for Connection Timeout and Read Timeout</li>
 <li>added in new memory locations for v1.1.0 libraries</li>
+<li>added reboot command</li>
 </ul>
 <br>
 <b>0.9.2</b>
